k8s/apps/leachnet/dn-downloads/flood/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flood
  labels:
    app: flood
spec:
  selector:
    matchLabels:
      app: flood
  template:
    metadata:
      labels:
        app: flood
    spec:
      containers:
      - image: jesec/flood:master-distroless
        name: flood
        resources:
            requests:
              memory: "10Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "500m"
        ports:
        - containerPort: 3001
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 10
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 12
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /downloads
        - name: data-downloading
          mountPath: /downloads/downloading
        - name: data-complete
          mountPath: /downloads/complete
        - name: data-complete-deduplicate
          mountPath: /downloads/complete/deduplicate
        - name: config
          mountPath: /config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: vault-downloads-duck-torrents
      - name: data-downloading
        persistentVolumeClaim:
          claimName: vault-downloads-duck-torrents-downloading
      - name: data-complete
        persistentVolumeClaim:
          claimName: vault-downloads-duck-torrents-complete
      - name: data-complete-deduplicate
        persistentVolumeClaim:
          claimName: vault-downloads-duck-torrents-complete-deduplicate
      - name: config
        persistentVolumeClaim:
          claimName: flood-config
