k8s/apps/leachnet/dn-downloads/flood/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flood-http
spec:
  ports:
  - name: http
    port: 9091
    targetPort: http
  selector:
    app: flood
